--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="icon">
 
         <a href=""> <img src="fblogo.png" alt="facebooklogo"> </a>
-        <a href=""> <img src="instalogo.jfif" alt="instagram"></a>
+        <a href="https://www.instagram.com/mr___perfect___21" target=blank> <img src="instalogo.jfif" alt="instagram"></a>
         <a href=""> <img src="google.png" alt="google"></a>
         <a href=""> <img src="whatsapp.jfif" alt="whatsapp"></a>
 
