--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <a href="https://www.facebook.com/profile.php?id=100026136093587" target=blank> <img src="fblogo.png" alt="facebooklogo"> </a>
         <a href="https://www.instagram.com/mr___perfect___21" target=blank> <img src="instalogo.jfif" alt="instagram"></a>
-        <a href="tel:+919629371608"target=blank> <img src="google.png" alt="google"></a>
+        <a href=""> <img src="google.png" alt="google"></a>
         <a href="https://bit.ly/3HdbYyY" target=blank> <img src="whatsapp.jfif" alt="whatsapp"></a>
 
     </div>
